--- a/styles/css-file.css
+++ b/styles/css-file.css
@@ -90,6 +90,23 @@
             clear: both;
             display: table;
         }
+        /*making wavy background*/
+        
+        .spacer {
+            aspect-ratio: 960/100;
+            width: 100%;
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: cover;
+        }
+        
+        .layer1 {
+            background-image: url(../images/wave.svg);
+        }
+        
+        .layer2 {
+            background-image: url(../images/wave2.svg);
+        }
         /*Styling links*/
         
         a:link {
